--- a/app.json
+++ b/app.json
@@ -80,5 +80,12 @@
     "addons": [],
     "buildpacks": [{
         "url": "heroku/python"
-    }]
+    }],
+    
+    "formation": {
+        "worker": {
+            "quantity": 1,
+            "size": "free"
+        }
+    }
 }
